# pokerbot-3000

./: .gitignore  AGENTS.md  Makefile  README.md  package-lock.json  package.json  pyproject.toml
src/pokerbot_3000/: __init__.py  __main__.py  cli.py  reachy_bridge.py
src/pokerbot_3000/app/: api.py  runtime.py  server.py
src/pokerbot_3000/domain/: __init__.py  cards.py  models.py
src/pokerbot_3000/llm/: __init__.py  cerebras.py  prompt_catalog.py
src/pokerbot_3000/llm/prompts/: __init__.py  agent_banter.system.md  decide_agent_action.system.md  generate_table_talk.system.md  read_board_cards.system.md  read_board_cards.user.md  read_hole_cards.system.md  read_hole_cards.user.md  read_public_table.system.md  read_public_table.user.md
src/pokerbot_3000/orchestrator/: __init__.py  agents.py  service.py
src/pokerbot_3000/perception/: __init__.py  public_vision.py
src/pokerbot_3000/ports/: __init__.py  clients.py  llm.py  perception.py  voice.py
src/pokerbot_3000/voice/: __init__.py  asr.py  capture.py  coordinator.py  elevenlabs.py  grammar.py
src/pokerbot_3000/web/: __init__.py
src/pokerbot_3000/web/static/: app.js  eliza.js  input.css
src/pokerbot_3000/web/templates/: client_eliza.html.jinja  index.html.jinja
tests/: __init__.py  test_app.py  test_cerebras_llm.py  test_cli.py  test_domain_models.py  test_elevenlabs_voice.py  test_orchestrator.py  test_public_vision.py  test_reachy_bridge.py  test_voice_asr.py  test_voice_capture.py  test_voice_coordinator.py  test_voice_grammar.py
